syntax = "proto3";

option go_package = "gRPCSampleApp/proto";
option java_multiple_files = true;
option java_package = "io.grpc.gRPCSampleApp";
option java_outer_classname = "HelloWorldProto";

package proto;


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetMessage (MessageRequest) returns (stream MessageReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message MessageRequest {
}

message MessageReply {
  string replyMsg = 1;
}
